# AI-Interlinq

./: .dockerignore  .gitignore  CHANGELOG.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DIVINE_LAW_COMPLIANCE.md  LAW001_COMPLIANCE_REPORT.md  LICENSE.md  NOTICE.md  PRIVACY.md  README.md  SECURITY.md  TERMS.md  USAGE.md  benchmark.Dockerfile  docker-compose.yml  final_validation_report.md  go.mod  improvement_report.json  law.ai  law001_functional_test.py  law001_runner.py  law001_verification.py  law_ai_compliance_checker.py  main.py  production.Dockerfile  pyproject.toml  repository_analysis.md  requirements-dev.txt  requirements.txt  setup.py  snapshot.ai  testing_snapshot.ai
.github/: cicd-config.yml
.github/hooks/: pre-commit
.github/workflows/: auto-commit.yml  auto-implement.yml  auto-improve.yml  auto-improvement.yml  auto-version-commit.yml  ci.yml  code-analysis.yml  comprehensive-testing.yml  law-ai-enforcement.yml  law-ai-monitoring.yml  law-ai-version-control.yml  monitoring.yml  release.yml  test-suite.yml
ai_interlinq/: .gitignore  __init__.py  _init_.py  cli.py  config.py  exceptions.py  requirements-dev.txt  version.py
ai_interlinq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai_interlinq/adapters/: __init__.py  anthropic.py  deepseek.py  gemini.py  grok.py  huggingface.py  ollama.py  openai.py
ai_interlinq/cli/: __init__.py  benchmark.py  main.py  monitor.py
ai_interlinq/core/: __init__.py  communication_protocol.py  connection_manager.py  encryption.py  learning_cycle.py  memory_loader.py  memory_system.py  message_handler.py  pattern_detector.py  session_manager.py  snapshot_manager.py  status_checker.py  token_manager.py
ai_interlinq/middleware/: __init__.py  auth.py  compression.py  metrics.py  rate_limiter.py
ai_interlinq/plugins/: __init__.py  load_balancer.py  metrics.py  rate_limiter.py
ai_interlinq/transport/: __init__.py  base.py  redis.py  tcp.py  websocket.py
ai_interlinq/utils/: __init__.py  _init_.py  logging.py  parser.py  performance.py  serializer.py  validation.py
docker/: Dockerfile
docs/: API_REFERENCE.md  ARCHITECTURE.md  INSTALLATION.md  LAW_AI_USAGE_GUIDE.md  advanced_usage.md  getting_started.md  index.md
examples/: advanced_communication.py  advanced_features.py  basic_communication.py
governance/: law_control.governance  voting_system.py
memory/snapshots/: snapshot_20250725_133951_snap_test_agent_1753450791049.ai  snapshot_cycle_1_1753452200.json  snapshot_cycle_1_1753452276.json
monitoring/: prometheus.yml
scripts/: auto_commit_manager.py  auto_implementer.py  auto_improver.py  code_sync.py  comprehensive_md_updater.py  doc_updater.py  improvement_detector.py  intelligent_tester.py  release.sh  run_benchmarks.sh  run_tests.sh  setup_dev.sh  version_control.py
tests/: conftest.py  test_comprehensive.py
tests/integration/: test_system_integration.py
tests/test_core/: test_encryption.py  test_token_manager.py
tests/unit/: test_learning_cycle.py  test_snapshot_manager.py
