[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-interlinq"
version = "2.0.0"
description = "Ultra-fast AI-to-AI communication library with advanced features"
readme = "README.md"
license = {text = "GPL-2.0"}
authors = [{name = "mupoese"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=3.4.0",
    "asyncio-mqtt>=0.11.0",
    "websockets>=10.0",
    "redis>=4.0.0",
    "aioredis>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0", 
    "pytest-cov>=3.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]
monitoring = [
    "prometheus-client>=0.12.0",
    "grafana-client>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mupoese/AI-Interlinq"
Repository = "https://github.com/mupoese/AI-Interlinq"
Issues = "https://github.com/mupoese/AI-Interlinq/issues"
Documentation = "https://ai-interlinq.readthedocs.io"

[project.scripts]
ai-interlinq = "ai_interlinq.cli.main:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
